--- a/practice-1.html
+++ b/practice-1.html
@@ -6,21 +6,31 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        button{
+         button{
             background-color: red;
         }
     </style>
 </head>
 <body>
-   <div id="box">
+
+ 
+   <!-- <div id="box">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Et at odio praesentium numquam, distinctio, corporis provident aut rem omnis fuga libero eligendi placeat autem. Dolores sapiente magnam a ipsa ea.
-   </div>
+</div>
 
    <h1 class="heading">heading 1</h1>
    <h1 class="heading">heading 1</h1>
    <h1 class="heading">heading 1</h1>
    <h1 class="heading">heading 1</h1>
-   <button style="background-color: pink;">click me</button>
+   <button style="background-color: pink;">click me</button>  -->
+
+   <!-- PRACTICE 2 -->
+
+   <h1>this is me my is </h1>
+
+   <div id="outer"> outer
+    <div id="inner">inner</div>
+   </div>
 
    
 </body>
