--- a/text-align.html
+++ b/text-align.html
@@ -7,8 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is a heading</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, corporis? Reprehenderit dolores incidunt delectus fugiat harum ratione placeat? Impedit dolores voluptatem esse incidunt labore iusto, suscipit eius maiores itaque recusandae voluptate, provident eos officia sapiente fugit excepturi deserunt? Unde veritatis dolorum reiciendis excepturi exercitationem totam quasi ad, iusto maxime maiores? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, nulla! Qui expedita commodi, perferendis voluptates laborum minus enim recusandae totam? Quam delectus nihil error, vitae nemo fugiat repellat aut magnam.</p>
+    <!-- <h1>This is a heading</h1>
+    <p id="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, corporis? Reprehenderit dolores incidunt delectus fugiat harum enim recusandae totam? Quam delectus nihil error, vitae nemo fugiat repellat aut magnam.</p>
+
+
+    <p id="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum nisi nostrum ex sint maxime exercitationem, dolor ipsum architecto esse magnam, commodi repellat, aperiam asperiores officiis numquam consequatur sunt earum eaque?</p>
     <a></a>
+    <h1 id="h1">heading 1</h1>
+    <h1 id="h1">heading 2</h1>
+    <h1 id="h3">Heading 3</h1>
+    <h1 id="h4">Heading 4</h1> -->
+
+    <p id="one">pragraph</p>
+    <p>pragraph</p>
+    <p id="three">pragraph Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi perferendis vitae aut natus? Quam aperiam illo vitae? Tenetur sequi, neque commodi consequatur reiciendis excepturi perspiciatis porro quasi, nihil, sed quia!
+    Nisi, quidem ipsum corrupti totam sint quod quaerat, quam consectetur, eius quia dicta cum magni molestiae! Excepturi est, error ab illo voluptatem architecto, consequatur eveniet maxime dolor perspiciatis rem nisi.</p>
 </body>
 </html>
