--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>level 1</title>
+    <title>Level 2</title>
     <link rel="stylesheet" href="style.css">
- </head>
- <body>
-    <h1>hello form mahib</h1>
-    <p>This is pragraph</p>
-    <button>click me!</button> 
- </body>
- </html>
+</head>
+<body>
+    <!-- <div>
+    <div class="div1"></div>
+    <br>
+    <div class="div2"></div>
+    <br>
+    <div class="div3"></div>
+</div> -->
+<div id="navbar">
+<a id="logo">Amazon.in</a>
+<a>Account</a>
+<a>My cart</a>
+<a>content us</a>
+<input placeholder="Srarch Amazon.in">
+<button>Search</button>
+</div>
+
+
+</body>
+</html>
